--- a/ui.html
+++ b/ui.html
@@ -141,7 +141,7 @@
 		<div class="shop-container" style="position: absolute;left: 50%;top: 50%;transform: translate(-50%, -50%);width: 1550px;height: 610px;box-shadow: 1px 1px 10px rgba(0, 0, 0, .4);background-color: rgba(17, 5, 17, 0.6);">
 			<!-- header -->
 			<div class="header" align="center">
-				<span style="font-size: 25px;">JSN SHOP</span><span id="close" class="close" style="float: right;padding: 10px;font-size: 18px;margin-top: -10px;cursor: pointer;">❌</span>
+				<span style="font-size: 25px;">MGR SHOP</span><span id="close" class="close" style="float: right;padding: 10px;font-size: 18px;margin-top: -10px;cursor: pointer;">❌</span>
 			</div>
 			<!-- home -->
 			<div class="body home style-4"  style="overflow-y: auto;height: 540px;">
